--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ ca.c
 2_test.c
 *.exe
 *.dll
+AOS_2/main.cpp
+AOS_2/curve/CMakeLists.txt
+AOS_2/curve/CMakeLists.txt.user
+AOS_2/curve/curve.cpp
+AOS_2/curve/curve.h
+AOS_2/curve/main.cpp
