--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "stdio.h": "c",
         "time.h": "c",
         "stdlib.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "D:/workstation/C/AOS_2/curve"
 }
